fixed some alignment issue on cart

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -12,7 +12,7 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 20px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .cartItemImg {
@@ -94,7 +94,7 @@ a:hover {
     flex-direction: column;
     width: 20%;
     margin: 10px;
-    height: 56vh;
+    height: 65vh;
 }
 
 .filters>span {
